исправления после первой попытки защиты

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -313,22 +313,22 @@
             </div>
             <a class="products__link" href="cart.html">Заказать</a>
           </li>
-          <li class="products-big-list__container">
-            <div class="products-big-list__text">
-              <p class="products-big-list__bold-text">Показать еще 100500 товаров</p>
+          <li class="products__big-list">
+            <div class="products__text">
+              <p class="products__title">Показать еще 100500 товаров</p>
               <p>На самом деле вкусов гораздо больше!</p>
             </div>
-            <a class="products-big-list__link" href="products.html">Показать все</a>
+            <a class="products__link products__link--big-list" href="products.html">Показать все</a>
           </li>
         </ul>
       </div>
     </section>
     <section class="extra-products">
-      <h2 class="extra-products__heading">
+      <div class="extra-products__heading">
         <div class="extra-products__line">
           <span>Дополнительные товары</span>
         </div>
-      </h2>
+      </div>
       <div class="extra-products__wrapper">
         <div class="extra-products__big-container">
           <ul class="extra-products__list">
