--- a/source/form.html
+++ b/source/form.html
@@ -56,7 +56,7 @@
     <form class="form" action="https://echo.htmlacademy.ru/" method="post">
       <div class="form__columns">
         <fieldset class="form__item form__item--info">
-          <legend class="visually-hidden">Информация о питомце</legend>
+          <div class="visually-hidden">Информация о питомце</div>
           <div class="form__container">
             <p class="form__point">
               <label for="catName">Имя:<sup>*</sup></label>
@@ -74,7 +74,7 @@
         </fieldset>
         <fieldset class="form__item form__item--program">
           <div class="form__container">
-            <legend class="visually-hidden">Цель программы</legend>
+            <div class="visually-hidden">Цель программы</div>
             <ul class="form__list form__list--goal">
               <li class="form__option">
                 <input class="visually-hidden form__radio" type="radio" name="programVersion" id="slimProgram" checked>
@@ -94,11 +94,11 @@
       </div>
       <fieldset class="form__item form__item--contacts">
         <div class="form__title form__title--line">
-          <legend class="form__legend">
+          <div class="form__legend">
             <span>
               Контактные данные (владельца кота)
             </span>
-          </legend>
+          </div>
         </div>
         <div class="form__container">
           <p class="form__point">
@@ -119,11 +119,11 @@
       </fieldset>
       <fieldset class="form__item form__item--comment">
         <div class="form__title">
-          <legend class="form__legend">
+          <div class="form__legend">
             <span>
               Комментарий
             </span>
-          </legend>
+          </div>
         </div>
         <div class="form__container">
           <label for="comment" class="visually-hidden" aria-label="Комментарий"></label>
@@ -132,11 +132,11 @@
       </fieldset>
       <fieldset class="form__item form__item--add">
         <div class="form__title">
-          <legend class="form__legend">
+          <div class="form__legend">
             <span>
               Дополнительно
             </span>
-          </legend>
+          </div>
         </div>
         <div class="form__container">
           <ul class="form__list form__list--extra">
