--- a/source/index.html
+++ b/source/index.html
@@ -78,7 +78,8 @@
               <h3 class="programs__title">Похудение</h3>
               <p class="programs__description">Ваш кот весит больше собаки и почти утратил способность лазить по
                 деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-              <a class="programs__link" href="catalog.html">Каталог slim</a>
+              <a class="programs__link" href="catalog.html">Каталог slim
+              </a>
             </article>
           </li>
           <li class="programs__item programs__item--pro">
@@ -167,7 +168,9 @@
                   <div class="slider__scale">
                     <div class="slider__bar"></div>
                   </div>
-                  <div class="slider__toggle" tabindex="0"></div>
+                  <div class="slider__toggle" tabindex="0">
+                    <span class="visually-hidden">Переключатель слайдера</span>
+                  </div>
                 </div>
                 <button class="slider__button slider__button--after">Стало</button>
               </div>
