--- a/source/index.html
+++ b/source/index.html
@@ -78,8 +78,7 @@
               <h3 class="programs__title">Похудение</h3>
               <p class="programs__description">Ваш кот весит больше собаки и почти утратил способность лазить по
                 деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-              <a class="programs__link" href="catalog.html">Каталог slim
-              </a>
+              <a class="programs__link" href="catalog.html">Каталог slim</a>
             </article>
           </li>
           <li class="programs__item programs__item--pro">
